# api-server

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: main.rs
app/src/api_models/: content_type.rs  endpoint.rs  endpoint_variant.rs  generic_unit.rs  geo_coords.rs  pressure_unit.rs  segment_atmospheric.rs  segment_base.rs  segment_variant.rs  sensor.rs  server_status.rs  station_status.rs  temperature_unit.rs
app/src/app/: config.rs  mod.rs
app/src/app/handlers/: info.rs  mod.rs
app/src/app/middleware/: colors.rs  mod.rs
app/src/app/middleware/logging/: colors.rs  mod.rs
app/src/models/: mod.rs  prelude.rs  station.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_stations.rs  m20251119_183129_stations_add_coords.rs
src/api_models/: measurement_base.rs  measurement_humidity.rs  measurement_pressure.rs  measurement_temperature.rs  mod.rs  page.rs  report.rs  result.rs  server_info.rs  station.rs  stations_response.rs
src/app/: mod.rs
src/app/handlers/: info.rs
